==> hathach/tinyusb/src/portable/wch/dcd_ch32x035.c <==
#include "tusb_option.h"
#include "device/dcd.h"
#include "ch32x035_usbfs_reg.h" // TODO: Create and populate this header with CH32X035 USBFS registers
#define EP_MAX (8) // TODO: Verify max endpoints for CH32X035
#define EP_DMA(ep)     ((&USBOTG_FS->UEP0_DMA)[ep])
#define EP_TX_LEN(ep)  ((&USBOTG_FS->UEP0_TX_LEN)[2 * ep])
#define EP_TX_CTRL(ep) ((&USBOTG_FS->UEP0_TX_CTRL)[4 * ep])
#define EP_RX_CTRL(ep) ((&USBOTG_FS->UEP0_RX_CTRL)[4 * ep])

bool dcd_init(uint8_t rhport, const tusb_rhport_init_t* rh_init) {
  (void) rh_init;
  // TODO: CH32X035: Initialize USB peripheral registers
  // TODO: CH32X035: Configure PLLs, clocks for USB
  // TODO: CH32X035: Enable USB interrupts
  // TODO: CH32X035: Setup EP0 buffers and control registers

  // Example from dcd_ch32_usbfs.c (NEEDS COMPLETE REPLACEMENT FOR CH32X035)
  // USBOTG_FS->BASE_CTRL = USBFS_CTRL_SYS_CTRL | USBFS_CTRL_INT_BUSY | USBFS_CTRL_DMA_EN;
  // USBOTG_FS->UDEV_CTRL = USBFS_UDEV_CTRL_PD_DIS | USBFS_UDEV_CTRL_PORT_EN;
  // USBOTG_FS->DEV_ADDR = 0x00;
  //
  // USBOTG_FS->INT_FG = 0xFF;
  // USBOTG_FS->INT_EN = USBFS_INT_EN_BUS_RST | USBFS_INT_EN_TRANSFER | USBFS_INT_EN_SUSPEND;
  //
  // EP_DMA(0) = (uint32_t) &data.buffer[0][0];
  // EP_TX_LEN(0) = 0;
  // EP_TX_CTRL(0) = USBFS_EP_T_RES_NAK;
  // EP_RX_CTRL(0) = USBFS_EP_R_RES_ACK;
  //
  // USBOTG_FS->UEP4_1_MOD = 0xCC;
  // USBOTG_FS->UEP2_3_MOD = 0xCC;
  // USBOTG_FS->UEP5_6_MOD = 0xCC;
  // USBOTG_FS->UEP7_MOD = 0x0C;
  //
  // for (uint8_t ep = 1; ep < EP_MAX; ep++) {
  //   EP_DMA(ep) = (uint32_t) &data.buffer[ep][0];
  //   EP_TX_LEN(ep) = 0;
  //   EP_TX_CTRL(ep) = USBFS_EP_T_AUTO_TOG | USBFS_EP_T_RES_NAK;
  //   EP_RX_CTRL(ep) = USBFS_EP_R_AUTO_TOG | USBFS_EP_R_RES_NAK;
  // }
  // EP_DMA(3) = (uint32_t) &data.ep3_buffer.out[0]; // TODO: EP3 specific

  TU_LOG_DCD("CH32X035 DCD Init: TODO - Implement CH32X035 specific initialization\r\n");

  dcd_connect(rhport); // This might be generic enough, but review

  return true;
}

void dcd_int_enable(uint8_t rhport) {
  (void) rhport;
  // TODO: CH32X035: Enable the correct USB interrupt in the NVIC/PLIC
  // Example: NVIC_EnableIRQ(USBHD_IRQn); // This IRQn is likely different for CH32X035 USBFS
  TU_LOG_DCD("CH32X035 DCD Int Enable: TODO - Verify IRQn for CH32X035 USBFS\r\n");
}

void dcd_int_disable(uint8_t rhport) {
  (void) rhport;
  // TODO: CH32X035: Disable the correct USB interrupt in the NVIC/PLIC
  // Example: NVIC_DisableIRQ(USBHD_IRQn); // This IRQn is likely different for CH32X035 USBFS
  TU_LOG_DCD("CH32X035 DCD Int Disable: TODO - Verify IRQn for CH32X035 USBFS\r\n");
}

void dcd_connect(uint8_t rhport) {
  (void) rhport;
  // Example: USBOTG_FS->BASE_CTRL |= USBFS_CTRL_DEV_PUEN; // TODO: Verify CH32X035 register
  TU_LOG_DCD("CH32X035 DCD Connect: TODO - Verify pull-up enable for CH32X035\r\n");
}

void dcd_disconnect(uint8_t rhport) {
  (void) rhport;
  // Example: USBOTG_FS->BASE_CTRL &= ~USBFS_CTRL_DEV_PUEN; // TODO: Verify CH32X035 register
  TU_LOG_DCD("CH32X035 DCD Disconnect: TODO - Verify pull-up disable for CH32X035\r\n");
}

void dcd_edpt0_status_complete(uint8_t rhport, tusb_control_request_t const* request) {
  (void) rhport;
  if (request->bmRequestType_bit.recipient == TUSB_REQ_RCPT_DEVICE &&
      request->bmRequestType_bit.type == TUSB_REQ_TYPE_STANDARD &&
      request->bRequest == TUSB_REQ_SET_ADDRESS) {
    // USBOTG_FS->DEV_ADDR = (uint8_t) request->wValue; // TODO: Verify CH32X035 register
    TU_LOG_DCD("CH32X035 DCD Set Address: %d (TODO: Verify register write)\r\n", request->wValue);
  }
  // EP_TX_CTRL(0) = USBFS_EP_T_RES_NAK; // TODO: Verify CH32X035 registers
  // EP_RX_CTRL(0) = USBFS_EP_R_RES_ACK; // TODO: Verify CH32X035 registers
}

bool dcd_edpt_open(uint8_t rhport, tusb_desc_endpoint_t const* desc_ep) {
  (void) rhport;
  uint8_t ep = tu_edpt_number(desc_ep->bEndpointAddress);
  uint8_t dir = tu_edpt_dir(desc_ep->bEndpointAddress);
  TU_ASSERT(ep < EP_MAX);

  data.isochronous[ep] = desc_ep->bmAttributes.xfer == TUSB_XFER_ISOCHRONOUS;
  data.xfer[ep][dir].max_size = tu_edpt_packet_size(desc_ep);

  // TODO: CH32X035: Configure endpoint registers (type, buffer address, etc.)
  // if (ep != 0) {
  //   if (dir == TUSB_DIR_OUT) {
  //     if (data.isochronous[ep]) {
  //       EP_RX_CTRL(ep) = USBFS_EP_R_AUTO_TOG | USBFS_EP_R_RES_NYET; // TODO: Verify CH32X035 registers
  //     } else {
  //       EP_RX_CTRL(ep) = USBFS_EP_R_AUTO_TOG | USBFS_EP_R_RES_ACK; // TODO: Verify CH32X035 registers
  //     }
  //   } else {
  //     EP_TX_LEN(ep) = 0; // TODO: Verify CH32X035 registers
  //     EP_TX_CTRL(ep) = USBFS_EP_T_AUTO_TOG | USBFS_EP_T_RES_NAK; // TODO: Verify CH32X035 registers
  //   }
  // }
  TU_LOG_DCD("CH32X035 DCD EP Open %02X: TODO - Implement EP config\r\n", desc_ep->bEndpointAddress);
  return true;
}

bool dcd_edpt_xfer(uint8_t rhport, uint8_t ep_addr, uint8_t* buffer, uint16_t total_bytes) {
  (void) rhport;
  uint8_t ep = tu_edpt_number(ep_addr);
  uint8_t dir = tu_edpt_dir(ep_addr);

  struct usb_xfer* xfer = &data.xfer[ep][dir];
  dcd_int_disable(rhport); // TODO: Ensure this disabling/enabling is correct for CH32X035
  xfer->valid = true;
  xfer->buffer = buffer;
  xfer->len = total_bytes;
  xfer->processed_len = 0;
  dcd_int_enable(rhport);

  if (dir == TUSB_DIR_IN) {
    update_in(rhport, ep, true); // TODO: Ensure update_in is CH32X035 correct
  } else {
    // For OUT transfers, hardware should be ready to receive.
    // If using DMA, setup DMA here. Otherwise, reception is likely interrupt-driven in dcd_int_handler.
    // EP_RX_CTRL(ep) might need to be set to ACK if not already.
    TU_LOG_DCD("CH32X035 DCD EP Xfer %02X: TODO - Review OUT transfer setup\r\n", ep_addr);
  }
  return true;
}

void dcd_edpt_stall(uint8_t rhport, uint8_t ep_addr) {
  (void) rhport;
  uint8_t ep = tu_edpt_number(ep_addr);
  uint8_t dir = tu_edpt_dir(ep_addr);
  // if (ep == 0) {
  //   if (dir == TUSB_DIR_OUT) {
  //     EP_RX_CTRL(0) = USBFS_EP_R_RES_STALL; // TODO: Verify CH32X035 registers
  //   } else {
  //     EP_TX_LEN(0) = 0; // TODO: Verify CH32X035 registers
  //     EP_TX_CTRL(0) = USBFS_EP_T_RES_STALL; // TODO: Verify CH32X035 registers
  //   }
  // } else {
  //   if (dir == TUSB_DIR_OUT) {
  //     EP_RX_CTRL(ep) = (EP_RX_CTRL(ep) & ~USBFS_EP_R_RES_MASK) | USBFS_EP_R_RES_STALL; // TODO: Verify CH32X035 registers
  //   } else {
  //     EP_TX_CTRL(ep) = (EP_TX_CTRL(ep) & ~USBFS_EP_T_RES_MASK) | USBFS_EP_T_RES_STALL; // TODO: Verify CH32X035 registers
  //   }
  // }
  TU_LOG_DCD("CH32X035 DCD EP Stall %02X: TODO - Implement EP stall\r\n", ep_addr);
}

void dcd_edpt_clear_stall(uint8_t rhport, uint8_t ep_addr) {
  (void) rhport;
  uint8_t ep = tu_edpt_number(ep_addr);
  uint8_t dir = tu_edpt_dir(ep_addr);
  // if (ep == 0) {
  //   // For EP0, setup stage will clear stall, or specific clear command.
  //   // The original driver only cleared stall for OUT direction on EP0 here.
  //   if (dir == TUSB_DIR_OUT) {
  //     EP_RX_CTRL(0) = USBFS_EP_R_RES_ACK; // TODO: Verify CH32X035 registers
  //   }
  // } else {
  //   if (dir == TUSB_DIR_OUT) {
  //     // Reset toggle bit as well
  //     EP_RX_CTRL(ep) = (EP_RX_CTRL(ep) & ~(USBFS_EP_R_RES_MASK | USBFS_EP_R_TOG)) | USBFS_EP_R_RES_ACK; // TODO: Verify CH32X035 registers
  //   } else {
  //     EP_TX_CTRL(ep) = (EP_TX_CTRL(ep) & ~(USBFS_EP_T_RES_MASK | USBFS_EP_T_TOG)) | USBFS_EP_T_RES_NAK; // TODO: Verify CH32X035 registers
  //   }
  // }
  TU_LOG_DCD("CH32X035 DCD EP Clear Stall %02X: TODO - Implement EP clear stall\r\n", ep_addr);
}
